--- a/Resources/views/WMS/details.html.twig
+++ b/Resources/views/WMS/details.html.twig
@@ -5,80 +5,126 @@
 
 
 {% block content %}
-    <fieldset>
-        <legend>WMS-Detail</legen>	
-        <table>
-            <tr>
-                <th>WMS Titel</th>
-                <th>WMS Name</th>
-                <th>Abstract</th>
-                <th>Preview</th>
-            </tr>
-            <tr>
-                <td><h1 class="title" ><a href="{{ wms.getId() }}" target="_new">{{ wms.getTitle() }}</a></h1></td>
-                <td><h2 class="name">({{ wms.getName() }})</h2></td>
-                <td><p class="abstract">{{ wms.getAbstract() }}</p></td>
-                <td><div id="map" class="smallmap"></div></td>
-            </tr>
-        </table>
-    </fieldset>
-    <p class="fees">{{ wms.getFees() }}</p>
-    <p class="accessConstraints">{{ wms.getAccessConstraints() }}</p>
-    <div class="contact"></div>
-    <fieldset>
-        <legend>Edit</legend>
-        <ul class="actions">
-            <li><a href="{{ path('mb_wms_showdelete',{'id':wms.getId()}) }}">{% trans %}Delete{% endtrans %}</a></li>
-            <li><a href="#">{% trans %}Edit{% endtrans %}</a></li>
-            <li><a href="#">{% trans %}Update{% endtrans %}</a></li>
-        </ul>
-    </fieldset>
-    <fieldset>
-        <legend>Keywords</legend>
-        <ul class="keywords">
-            {#
-                {% for keyword in wms.getKeywords() %}
-                    <li  class="keyword">{{ keyword }}></li>
-                {% endfor %}
-            #}
-        </ul>
-    </fieldset>
-
-    <fieldset> 
-        <legend>GetCapabilities</legend>
-        <ul class="httpdcptypes">
-            <li>GET <a href="{{ wms.getMapGet() }}" target="_new">{{ wms.getMapGet() }}</a></li>
-            <li>POST <a href="http://example.com" target="_new">http://exampe.com/</a></li>
-            <li class="formats">application/vnd.ogc.wms_xml</li>
-        </ul>
-    </fieldset>
-
-    <fieldset>
-        <legend>GetMap</legend> 
-        <div class="request getMap">
-            <ul>
-                <li>GET <a href="{{ wms.getMapGet() }}" target="_new">{{ wms.getMapGet() }}</a></li>
-                <li>POST <a href="http://example.com" target="_new">http://exampe.com/</a></li>
-            </ul>
+    <nav class="actions">
+        <a href="{{ path('mb_wms_showdelete',{'id':wms.getId()}) }}">{% trans %}Delete{% endtrans %}</a>
+        <a href="">{% trans %}Edit{% endtrans %}</a>
+        <a href="#">{% trans %}Update{% endtrans %}</a>
+    </nav>
+    
+    <div class="wms">
+        <h1 class="title" ><a href="{{ wms.getId() }}" target="_new">{{ wms.getTitle() }}</a></h1>
+        <span class="name">({{ wms.getName() }})</span>
+        <p class="onlineResource">{{ wms.getOnlineResource() }}</p>
+        <p class="abstract"> {{ wms.getAbstract() }} </p>
+        <h2>{% trans %}Fees{% endtrans %}</h2>
+        <p class="fees">{{ wms.getFees() }}</p>
+        <h2>{% trans %}Accessconstraints{% endtrans %}</h2>
+        <p class="accessConstraints">{{ wms.getAccessConstraints() }}</p>
+        {% if wms is defined %}
+            <div class="preview">
+                <h2>{% trans %}OpenLayers Preview{% endtrans %}</h2>
+                <div id="map" class="smallmap"></div>
+            </div>
+        {% else %}
+            <p class="no-preview">{% trans %}WMS not published. Preview not available {% endtrans %}</p>
+        {% endif %}
+       
+        <div class="contact">
+            <h2>{% trans %}Contact{% endtrans %}</h2> 
+            <div class="contact-person> 
+                <span class="type">{% trans %}Person{% endtrans %}</span>
+                <span class="value">{{ wms.getContactPerson() }}</span>
+            </div>
+            <div class="contact-organization> 
+                <span class="type">{% trans %}Organization{% endtrans %}</span>
+                <span class="value">{{ wms.getContactOrganization() }}</span>
+            </div>
+            <div class="contact-position> 
+                <span class="type">{% trans %}Position{% endtrans %}</span>
+                <span class="value">{{ wms.getContactPosition() }}</span>
+            </div>
+            <div class="contact-voicetelephone> 
+                <span class="type">{% trans %}Telephone{% endtrans %}</span>
+                <span class="value">{{ wms.getContactVoiceTelephone() }}</span>
+            </div>
+            <div class="contact-voicefax> 
+                <span class="type">{% trans %}Fax{% endtrans %}</span>
+                <span class="value">{{ wms.getContactFacsimileTelephone() }}</span>
+            </div>
+            <div class="contact-electronicmailaddress"> 
+                <span class="type">{% trans %}Email{% endtrans %}</span>
+                <span class="value">{{ wms.getContactElectronicMailAddress() }}</span>
+            </div>
+            <div class="contact-address"> 
+                <span class="type">{% trans %}Address{% endtrans %}</span>
+                <span class="value">{{ wms.getContactAddress() }}</span>
+            </div>
+            <div class="contact-addresstype"> 
+                <span class="type">{% trans %}Addresstype{% endtrans %}</span>
+                <span class="value">{{ wms.getContactAddressType() }}</span>
+            </div>
+            <div class="contact-address-city"> 
+                <span class="type">{% trans %}City{% endtrans %}</span>
+                <span class="value">{{ wms.getContactAddressCity() }}</span>
+            </div>
+            <div class="contact-address-stateorprovince"> 
+                <span class="type">{% trans %}State or Province{% endtrans %}</span>
+                <span class="value">{{ wms.getContactAddressStateOrProvince() }}</span>
+            </div>
+            <div class="contact-address-postcode"> 
+                <span class="type">{% trans %}Postcode{% endtrans %}</span>
+                <span class="value">{{ wms.getContactAddressPostcode() }}</span>
+            </div>
+            <div class="contact-address-country"> 
+                <span class="type">{% trans %}Country{% endtrans %}</span>
+                <span class="value">{{ wms.getContactAddressCountry() }}</span>
+            </div>
         </div>
-    </fieldset>
 
 
-    <fieldset>
-        <legend>Preview</legend> 
-        <div>
-            <ul>
-                <li>GET <a href="http://example.com" target="_new">http://exampe.com/</a></li>
-                <li>POST <a href="http://example.com" target="_new">http://exampe.com/</a></li>
-            </ul>
+    </div>
+
+    <div class="requestGetCapabilities">
+        <h2>{% trans %}Operations{% endtrans %}</h2>
+        <h3>GetCapabilities</h3>
+        <div class="get">
+            <span class="type">GET</span>
+            <span class="value">
+                <a href="{{ wms.getRequestGetCapabilitiesGET() }}" target="_new">{{ wms.getRequestGetCapabilitiesGET() }}</a>
+            </span>
         </div>
-    </fieldset>
+        <div class="get">
+            <span class="type">POST</span>
+            <span class="value">
+                <a href="{{ wms.getRequestGetCapabilitiesPOST() }}" target="_new">{{ wms.getRequestGetCapabilitiesPOST() }}</a>
+            </span>
+        </div>
+    </div>
+
+    <div>
+        <h3>GetMap</h3>
+        <div class="get">
+            <span class="type">GET</span>
+            <span class="value">
+                <a href="{{ wms.getRequestGetMapGET() }}" target="_new">{{ wms.getRequestGetMapGET() }}</a>
+            </span>
+        </div>
+        <div class="get">
+            <span class="type">POST</span>
+            <span class="value">
+                <a href="{{ wms.getRequestGetMapPOST() }}" target="_new">{{ wms.getRequestGetMapPOST() }}</a>
+            </span>
+        </div>
+    </div>
 
 
-    <h2>{% trans %}Layerdetails{% endtrans %}</h2>
+    <h2>{% trans %}Layers{% endtrans %}</h2>
     {% for layer in wms.getLayer() %}
         {% include "MBWMSBundle:WMS:layerdetails.html.twig" %}
     {% endfor %}
+    {% if wms.getLayer()|length == 0 %}
+        <p class="emptydata">{% trans %}No Layers{% endtrans %}</p>
+    {% endif %}
     </div>
 {% endblock %}
 
@@ -91,9 +137,9 @@
     <script type="application/javascript">
     var previewWMS = {
         title: '{{ wms.getTitle() }}',
-        url: '{{ wms.getGetMapGet() }}',
+        url: '{{ wms.getRequestGetMapGET() }}',
         rootlayer: '{{ wms.getRootLayer().getName() }}',
-        format: '{{ wms.getDefaultGetMapFormat() }}',
+        format: '{{ wms.getDefaultRequestGetMapFormat() }}',
         projection: '{{ wms.getRootLayer().getDefaultSRS() }}',
         bounds: {
                     left: '{{ minx }}',
