--- a/Resources/views/WMS/layerdetails.html.twig
+++ b/Resources/views/WMS/layerdetails.html.twig
@@ -1,27 +1,10 @@
 <div class="wmslayer">
-
-    <tr>
-    <td>
-    <h2><a href="{{ path('mb_wmslayer_details',{'wmsId': layer.getWMS().getId(),'id':layer.getId()})  }}">{{ layer.getTitle() }}</a><h2>
-    </td>
-
-    <td>
-    <h2>{{ layer.getName() }}</h2>
-    </td>
-
-    <!--td>
+    <h3>
+    <a href="{{ path('mb_wmslayer_details',{'wmsId': layer.getWMS().getId(),'id':layer.getId()})  }}">{{ layer.getTitle() }}</a>
+    </h3>
+    <span class="name">{{ layer.getName() }}</span>
     <p class="abstract">{{ layer.getAbstract() }}folgt</p>
-    </td-->
-
-    </tr>
-    <table>
-        <tr>
-            <th>Layertitel</th>
-            <th>Layername</th>
-            <!--th>Abstract</th-->
-        </tr>
-        {% for layer in layer.getLayer() %}
-          {% include "MBWMSBundle:WMS:layerdetails.html.twig" %}
-        {% endfor %}
-    </table>
+    {% for layer in layer.getLayer() %}
+        {% include "MBWMSBundle:WMS:layerdetails.html.twig" %}
+    {% endfor %}
 </div>
