--- a/Resources/views/WMS/base.html.twig
+++ b/Resources/views/WMS/base.html.twig
@@ -3,7 +3,7 @@
 {% block subnavigation %}
 <nav class="action">
     <a href="{{ path('mb_wms_showadd')  }}">{% trans %}register WMS{% endtrans %}</a>
-    <form class="search wms_search">
+    <form class="disabled" class="search wms_search">
         <input name="q" id="q" />
         <input type="submit" value="{% trans %}search{% endtrans %}" />
 	</form>
