Delete own WMCs

--- a/src/Mapbender/WmcBundle/Resources/views/Element/wmcstorage.html.twig
+++ b/src/Mapbender/WmcBundle/Resources/views/Element/wmcstorage.html.twig
@@ -2,7 +2,11 @@
     <div id="wmc-save">
         <label for="wmc-doc-title-save">{% trans %}Title{% endtrans %}</label>
         <input id="wmc-doc-title-save" />
-        <button>{% trans %}Save{% endtrans %}</button>
+        <button id="save-wmc">{% trans %}Save{% endtrans %}</button>
+        <hr/>
+        <label for="wmc-delete">{% trans %}Title{% endtrans %}</label>
+        <select id="wmc-delete"></select>
+        <button id="delete-wmc">{% trans %}Delete{% endtrans %}</button>
     </div>
     <div id="wmc-load">
         <label for="wmc-doc-title-load">{% trans %}Title{% endtrans %}</label>
