--- a/Resources/views/WMS/layerdetails.html.twig
+++ b/Resources/views/WMS/layerdetails.html.twig
@@ -1,6 +1,6 @@
 <div class="wmslayer">
     <h3>
-    <a href="{{ path('mb_wmslayer_details',{'wmsId': layer.getWMS().getId(),'id':layer.getId()})  }}">{{ layer.getTitle() }}</a>
+    <a href="{{ path('mb_wms_wmslayer_details',{'wmsId': layer.getWMS().getId(),'id':layer.getId()})  }}">{{ layer.getTitle() }}</a>
     </h3>
     <span class="name">{{ layer.getName() }}</span>
     <p class="abstract">{{ layer.getAbstract() }}</p>
