--- a/Resources/views/WMS/base.html.twig
+++ b/Resources/views/WMS/base.html.twig
@@ -2,7 +2,7 @@
 
 {% block subnavigation %}
 <nav class="action">
-    <a href="{{ path('mb_wms_showadd')  }}">{% trans %}register WMS{% endtrans %}</a>
+    <a href="{{ path('mb_wms_wms_register')  }}">{% trans %}register WMS{% endtrans %}</a>
     <form class="disabled" class="search wms_search">
         <input name="q" id="q" />
         <input type="submit" value="{% trans %}search{% endtrans %}" />
