--- a/Resources/views/WMS/base.html.twig
+++ b/Resources/views/WMS/base.html.twig
@@ -1,7 +1,11 @@
 {% extends '::base.html.twig' %} 
 
+{% stylesheets '@MBWMSBundle/Resources/public/style/*' %}
+    <link  rel="stylesheet" href="{{ asset_url }}" />
+{% endstylesheets  %}
 {% block subnavigation %}
 <nav class="action">
+    <h1>WMS Navigation</h1>
     <a href="{{ path('mb_wms_wms_register')  }}">{% trans %}register WMS{% endtrans %}</a>
     <form class="disabled" class="search wms_search">
         <input name="q" id="q" />
